fix: correct visible tag naming

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -234,13 +234,13 @@ nav {
 }
 
 
-.__visible {
+.--visible {
     transition-property: right;
     transition-duration: 400ms;
     right: 70%;
 }
 
-.__hidden {
+.--hidden {
     transition-property: right;
     transition-duration: 400ms;
     right: 100%;
